static/css/base.css
/* =======================
   Root Variables
======================= */
:root {
    --white: #FEFDFB;
    --lightgrey: #a7a9a5;
    --darkgrey: #3B342B;
    --hessian: #988671;
    --black: #1F1E1E;
    --orange: #C7500D;
}

/* =======================
   Global Styles
======================= */
html {
    height: 100%;
    scroll-behavior: smooth;

}

body {    
    color: var(--black);
    font-family: 'Merriweather', Verdana, sans-serif;
    font-size: 1rem;
    line-height: 1.6;
    letter-spacing: 0.5px;
}

main {
    background-color: var(--white);
    min-height: 80vh;
    margin-top: 1rem;
}

/* Heading Styling */
h1, h2 {
    font-family: 'Playfair Display', serif;
    color: var(--black);
    line-height: 1.3;
}

h1 {
    font-size: 2.5rem;
    margin-bottom: 1rem;
}

h2 {
    font-size: 2rem;
    margin-bottom: 0.8rem;
}

h3 {
    font-size: 1.5rem;
    margin-bottom: 0.6rem;
}

.subheading {
    font-family: 'Playfair Display', serif;
    font-size: 1.5rem;
    font-weight: 500;
    line-height: 1.2;
    margin-top: 0;
    margin-bottom: 0.5rem;
}

.card {
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    transition: box-shadow 0.3s ease;
}

.card:hover {
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
}

.card-img-top {
    object-fit: cover;  /* Ensures images fill the container without distortion */
    height: 18rem;      /* Set a fixed height for all images */
    width: 100%;        /* Ensure images don't stretch */
    transition: transform 0.3s ease;
}

.card-img-top:hover,
.product-detail-image:hover {
    transform: scale(1.05);
}

.product-detail-image {
    object-fit: cover;
    height: 25rem;
    width: 100%;
    transition: transform 0.3s ease;
}

.product-detail-container p {
    font-size: 1rem;
    color: #555;
    margin-bottom: 1rem;
}

.footer-column {
    margin-top: 1rem;
}


/* =======================
   Hero Section
======================= */
#hero-container {
    background: url('/media/hero-image-2.webp') no-repeat center center;
    background-size: cover;
    height: 100vh;
    background-position: center;
}

#title-container {
    position: relative;
    top: -10rem;
}

#homepage-title {
    text-shadow: .25rem .25rem 1rem rgba(255, 255, 255, 0.8);
}

#slogan {
    font-size: 1rem;
    font-family: 'Merriweather', Verdana, sans-serif;
    margin: 0 0 1rem;
}

/* =======================
   Typography
======================= */
.logo-font {
    font-family: 'Playfair Display', Georgia, 'Times New Roman', Times, serif;
    color: var(--black) !important;
}

.text-black {
    color: var(--black) !important;
}

.text-orange {
    color: var(--orange) !important;
}

/* =======================
   Navbar & Links
======================= */
.navbar {
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    transition: box-shadow 0.3s ease;
}

.nav-link:hover {
    color: var(--darkgrey);
    transform: scale(1.05);    
}

.navbar-nav .nav-link,
.input-group > .form-control {
    font-size: 0.9rem;
}

a {
    color: var(--black);
    text-decoration: none;
}

a:hover {
    text-decoration: underline var(--black);
}

#navbar-basket-link {
    transition: transform 0.3s ease;
}

#navbar-basket-link:hover {
    transform: scale(1.05);
}

a.category-badge > span.badge:hover {
    background: var(--darkgrey) !important;
    color: var(--white) !important;
}

a.product-title,
a.product-title:hover {
    color: var(--black);
}

#social-icons {
    margin-top: 1rem;
}

/* ------------------------------- bootstrap toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}


/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.basket-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* Allauth form formatting */

.allauth-form-inner-content {
    margin-top: 4rem;
}

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: #6c757d; /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #000;
    border: 1px solid #000;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #fff;
    background-color: #222;
    border-color: #222;
}

.allauth-form-inner-content a {
	color: #17a2b8; /* text-info */
}

/* Product Form */

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

/* =======================
   Footer
======================= */
footer {
    background-color: var(--lightgrey);
    width: 100%;
    padding-top: 2rem;
    text-align: center;
}

footer a {
    color: var(--black) !important;
}

footer a:hover {
    color: var(--darkgrey) !important;
}

/* =======================
   Mail Chimp
======================= */

#mc_embed_signup {
    background-color: var(--darkgrey);
    color: var(--white);
    clear:left;
}

#mc_embed_signup h2 {
    font-weight: normal;
    padding: 0;
    margin: 1rem 0;
    font-size: 1.4em;
    color: var(--white);
}

#mc_embed_signup .button {
    background-color: var(--orange);
    color: var(--black);
    font-weight: bold;
}

#mc_embed_signup .button:hover,
#mc_embed_signup .button:active,
#mc_embed_signup .button:focus {
    transform: scale(1.05);
    color: var(--white);
    background-color: var(--orange);
}

/* =======================
   Buttons
======================= */

.shop-now-button,
.btn-orange {
    background: var(--orange);
    color: var(--black);
    font-weight: bold;
}

.shop-now-button {
    min-width: 10rem;
    transition: transform 0.3s ease;
}

.shop-now-button:hover {
    transform: scale(1.05);
    color: var(--white);
}

a.shop-now-button:hover,
a.shop-now-button:active,
a.shop-now-button:focus,
.btn-orange:hover,
.btn-orange:active,
.btn-orange:focus {
    background: var(--orange);
    color: var(--white);
}


.btn-black {
    background: var(--black);
    color: var(--white) !important;
}

.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: var(--orange);
    color: var(--white) !important;
}


.btn-outline-black {
    background: var(--white);
    color: var(--black) !important; /* use important to override link colors for <a> elements */
    border: 1px solid var(--black);
}


.btn-outline-black:hover,
.btn-outline-black:active,
.btn-outline-black:focus {
    background: var(--black);
    color: var(--white) !important;
}

/* Edit Button */
.btn-edit {
    background-color: var(--orange);
    color: var(--white);
    border: none;
    transition: background-color 0.3s ease;
}

.btn-edit:hover,
.btn-edit:focus {
    background-color: var(--hessian); /* Subtle hover effect */
    color: var(--white);
}

/* Delete Button */
.btn-delete {
    background-color: var(--darkgrey);
    color: var(--white);
    border: none;
    transition: background-color 0.3s ease;
}

.btn-delete:hover,
.btn-delete:focus {
    background-color: red; /* Stronger hover effect */
    color: var(--white);
}

/* Icon Button Styling */
.btn-edit i, .btn-delete i {
    font-size: 1.2rem; /* Adjust icon size */
    transition: transform 0.2s ease;
}

.btn-edit:hover i, .btn-delete:hover i {
    transform: scale(1.2); /* Slight hover effect */
}



/* =======================
   Icons & Buttons
======================= */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

/* Back-to-Top Button */

.btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
    opacity: 0.8;
    transition: opacity 0.3s ease;
}

.btt-button:hover {
    opacity: 1;
}

.btt-link,
.update-link,
.remove-item {
    cursor: pointer;
}

.update-link {
    color: var(--orange);
}

.remove-item {
    color: var(--darkgrey);
}

.basket-container {
    display: flex;
    align-items: center;
    justify-content: flex-end; /* Align to right in navbar */
    text-align: right;
}

#navbar-basket-link i {
    font-size: 1.2rem;
}

#navbar-basket-link {
    padding: 0;
}
#basket-total-text {
    font-size: 0.9rem; /* Adjust to make smaller */
    line-height: 1; /* Reduce spacing between lines */
    margin-top: 2px; /* Reduce spacing above text */
}

#logged-in-as,
#logged-in-name {
    font-size: 0.9rem;
}


/* =======================
   Responsive Design
======================= */

/* Larger container on xl screens */
@media (min-width: 1200px) {
    .container {
        max-width: 80%;
    }
}

/* Adjust for mobile devices */
@media (max-width: 1024px) {
    #hero-container {
        background-position: center center; /* Reset the background position for mobile */
    }
}

/* Center shopping basket icon in the dropdown for smaller screens */
@media (max-width: 991px) { /* Bootstrap's lg breakpoint */
    .basket-container {
        justify-content: center;
        width: 100%;
        margin: 10px 0; /* Space between other menu items */
    }

    #navbar-basket-link {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        text-align: center;
    }
}

@media (max-width: 768px) {
    #hero-container {
        margin-top: 3.25rem;
    }
}

